<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!--    Appbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/generalToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:minWidth="100dp"
            android:minHeight="0dp">
            <!--            Question: is setting the theme here needed? android:theme="@style/Theme.mws"-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways">

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@color/white"
                    android:contentDescription="@string/text_search"
                    android:paddingStart="@dimen/default_padding"
                    android:paddingTop="@dimen/default_padding"
                    android:paddingEnd="@dimen/default_padding"
                    android:src="@drawable/ic_search" />

                <TextView
                    android:id="@+id/appBarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/search_button"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:id="@+id/genresRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/appBarTitle"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:scrollbars="none">

                        <!-- TODO: Make a list of genres and repeat the buttons for each genre -->
                        <Button
                            style="@style/buttonRoundedBlack"
                            android:fontFamily="@font/roboto"
                            android:text="@string/genre_comedy" />

                        <Button
                            style="@style/buttonRoundedBlack"
                            android:fontFamily="@font/roboto"
                            android:text="@string/genre_comedy" />

                        <Button
                            style="@style/buttonRoundedBlack"
                            android:fontFamily="@font/roboto"
                            android:text="@string/genre_comedy" />

                        <Button
                            style="@style/buttonRoundedBlack"
                            android:fontFamily="@font/roboto"
                            android:text="@string/genre_comedy" />

                        <Button
                            style="@style/buttonRoundedBlack"
                            android:fontFamily="@font/roboto"
                            android:text="@string/genre_comedy" />

                        <Button
                            style="@style/buttonRoundedBlack"
                            android:fontFamily="@font/roboto"
                            android:text="@string/genre_comedy" />

                        <Button
                            style="@style/buttonRoundedBlack"
                            android:fontFamily="@font/roboto"
                            android:text="@string/genre_comedy" />

                        <Button
                            style="@style/buttonRoundedBlack"
                            android:fontFamily="@font/roboto"
                            android:text="@string/genre_comedy" />
                    </LinearLayout>
                </HorizontalScrollView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/genresRow"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@color/light_gray"
                    android:orientation="horizontal"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:drawablePadding="11dp"
                        android:gravity="start"
                        android:text="@string/text_filter"
                        android:textColor="@color/black"
                        app:drawableStartCompat="@drawable/ic_filter" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:drawablePadding="11dp"
                        android:gravity="end"
                        android:text="@string/text_sort"
                        android:textColor="@color/black"
                        app:drawableStartCompat="@drawable/ic_sort" />
                </RelativeLayout>
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!--    Body -->
    <fragment
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navGraph="@navigation/mobile_navigation" />

    <!--    Bottom navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>